<resources>
    <string name="app_name">Animal University</string>
    <string name="target_ipk">Target IPK</string>
    <string name="ipk_saya">IPK Saya</string>
    <string name="header">header</string>
    <string name="login">Login</string>
    <string name="indeks_prestasi_sementara">Indeks Prestasi Sementara</string>
    <string name="harap_tunggu">Harap tunggu</string>
    <string name="error_login">NIM atau kata sandi yang anda masukkan salah</string>
    <string name="nim_caps">NIM</string>
    <string name="password">Kata sandi</string>
    <string name="title_activity_gpa">IPS</string>
    <string name="tambah_ips">Tambah IPS</string>
    <string name="simpan">Simpan</string>
    <string name="error_empty">Kolom tidak boleh kosong</string>
    <string name="range_gpa">Hanya boleh 0 - 4</string>
    <string name="tambah_ips_semester">Tambah IPS Semester</string>
    <string name="ubah_ips_semester">Ubah IPS Semester</string>
    <string name="disable_edit_message">IPS ini tidak bisa diubah karena sudah terkunci</string>
    <string name="logout">Logout</string>
    <string name="profile">Profil</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="foto">Foto</string>
    <string name="nama">Nama</string>
    <string name="fakultas">Fakultas</string>
    <string name="jurusan">Jurusan</string>
    <string name="email">Email</string>
    <string name="alamat">Alamat</string>
    <string name="batal">Batal</string>
    <string name="title_activity_edit_email">Ubah Email</string>
    <string name="enter_password">Masukkan kata sandi anda</string>
    <string name="invalid_email">Format email salah</string>
    <string name="invalid_password">Kata sandi salah</string>
    <string name="title_activity_target_gpa">Ubah Target IPK</string>
    <string name="title_activity_edit_address">Ubah Alamat</string>
    <string name="dot">•••••••••••••</string>
    <string name="informasi_lainnya">Informasi Lainnya</string>
    <string name="old_password">Kata sandi lama</string>
    <string name="new_password">Kata sandi baru</string>
    <string name="re_password">Ulangi kata sandi</string>
    <string name="not_same_password">Kata sandi tidak sesuai</string>
    <string name="title_activity_edit_password">Ubah Kata Sandi</string>
    <string name="password_min">Kata sandi minimal 6 karakter</string>
    <string name="pilih_gambar">Pilih gambar</string>
    <string name="foto_profil">Foto profil</string>
</resources>
