<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.main.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraint_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/common_padding">

                <ImageView
                    android:id="@+id/img_banner"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:contentDescription="@string/header"
                    android:scaleType="centerCrop"
                    android:src="@drawable/no_img_bg" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_photo"
                    android:layout_width="@dimen/img_profile_size"
                    android:layout_height="@dimen/img_profile_size"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="130dp"
                    android:src="@color/colorAccent"
                    app:civ_border_color="@color/colorWhite"
                    app:civ_border_width="3dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@id/img_banner" />


                <TextView
                    android:id="@+id/txt_target_ipk"
                    style="@style/TextAppearance.TextIPKHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_padding"
                    android:layout_marginRight="@dimen/common_padding"
                    android:text="@string/target_ipk"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_banner" />

                <TextView
                    android:id="@+id/txt_target_ipk_value"
                    style="@style/TextAppearance.TextIPKValueHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    app:layout_constraintLeft_toLeftOf="@id/txt_target_ipk"
                    app:layout_constraintRight_toRightOf="@id/txt_target_ipk"
                    app:layout_constraintTop_toBottomOf="@id/txt_target_ipk"
                    android:text="3.6" />

                <TextView
                    android:id="@+id/txt_ipk_saya"
                    style="@style/TextAppearance.TextIPKHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ipk_saya"
                    android:textAlignment="center"
                    app:layout_constraintLeft_toLeftOf="@id/txt_target_ipk"
                    app:layout_constraintRight_toRightOf="@id/txt_target_ipk"
                    app:layout_constraintTop_toBottomOf="@id/txt_target_ipk_value" />

                <TextView
                    android:id="@+id/txt_ipk_saya_value"
                    style="@style/TextAppearance.TextIPKValueHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    app:layout_constraintLeft_toLeftOf="@id/txt_target_ipk"
                    app:layout_constraintRight_toRightOf="@id/txt_target_ipk"
                    app:layout_constraintTop_toBottomOf="@id/txt_ipk_saya"
                    android:text="3.6" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="@dimen/common_padding"
                    android:paddingRight="@dimen/common_padding"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/txt_target_ipk"
                    app:layout_constraintTop_toBottomOf="@id/img_photo">

                    <TextView
                        android:id="@+id/txt_student_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="Mahasiswa Lorem" />

                    <TextView
                        android:id="@+id/txt_student_nim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/txt_student_name"
                        android:text="20160801173" />

                </android.support.constraint.ConstraintLayout>
            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.RecyclerView

                android:id="@+id/recycle_gpa"
                app:layout_constraintTop_toBottomOf="@id/constraint_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:clipToPadding="false"
                android:scrollbarStyle="outsideOverlay"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>